[package]
name = "webapp"
version = "0.1.0"
authors = ["MarkMcCaskey <rabidwaffle@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = { version = "0.3.0", features = ["json"]}
diesel = { version = "0.15.2", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
dotenv = "0.10.1"
serde = "*"
serde_json = "*"
serde_codegen = "0.9.0"
serde_derive = "^1.0.11"